force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_Offeror_Seismic_Declaration__c.field-meta.xml
<CustomField>
    <fullName>LOP_Offeror_Seismic_Declaration__c</fullName>
    <description>Offeror declaration if the RLP contains seismic requirements.</description>
    <inlineHelpText>Seismic Requirement Declaration</inlineHelpText>
    <label>Offeror Seismic Declaration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>The RLP does not contain seismic requirements. No documentation required The RLP contains seismic requirements.</fullName>
            </value>
            <value>
                <fullName>Fully meets seismic requirements or meets an exemption under the RLP</fullName>
            </value>
            <value>
                <fullName>Does not meet seismic requirements, but will be retrofitted to meet seismic requirements</fullName>
            </value>
            <value>
                <fullName>Will be constructed to meet seismic requirements</fullName>
            </value>
            <value>
                <fullName>Will not meet seismic requirements</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>