force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_Office_RSF_OFFERED__c.field-meta.xml
<CustomField>
    <fullName>LOP_Office_RSF_OFFERED__c</fullName>
    <description>What is the amount of Rentable Square Feet (RSF) offered?</description>
    <label>Rentable Square Feet (RSF) offered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>