force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_OFFICE_SPACE_RSF__c.field-meta.xml
<CustomField>
    <fullName>LOP_OFFICE_SPACE_RSF__c</fullName>
    <description>Office Space :</description>
    <label>General Purpose (Office) Space RSF</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>