force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_OP_COST_COST_PER_ABOA__c.field-meta.xml
<CustomField>
    <fullName>LOP_OP_COST_COST_PER_ABOA__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Operating Cost per ABOA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>