force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_Op_Cost_Years_Effective__c.field-meta.xml
<CustomField>
    <fullName>LOP_Op_Cost_Years_Effective__c</fullName>
    <label>Op Cost Years Effective</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>