force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_Option_Parking__c.field-meta.xml
<CustomField>
    <fullName>LOP_Option_Parking__c</fullName>
    <description>5. Is the Offeror capable of providing an option to the government to lease the entire parking area for security purposes?*</description>
    <label>5. Option Parking</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Partial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>