force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_Owner_Address__c.field-meta.xml
<CustomField>
    <fullName>LOP_Owner_Address__c</fullName>
    <description>Property Owner Street Address</description>
    <label>Property Owner Street Address</label>
    <length>80</length>
    <type>Text</type>
</CustomField>