force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_Owner_City__c.field-meta.xml
<CustomField>
    <fullName>LOP_Owner_City__c</fullName>
    <description>Property Owner City</description>
    <label>Property Owner City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>