force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_Owner_LastName__c.field-meta.xml
<CustomField>
    <fullName>LOP_Owner_LastName__c</fullName>
    <description>What is the Last name of the property&apos;s recorded owner?</description>
    <label>Property Owner Last Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>