force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_Owner_Main_Phone__c.field-meta.xml
<CustomField>
    <fullName>LOP_Owner_Main_Phone__c</fullName>
    <description>Property Owner Main Phone</description>
    <label>Property Owner Main Phone</label>
    <length>18</length>
    <type>Text</type>
</CustomField>