force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_Owner_Zip__c.field-meta.xml
<CustomField>
    <fullName>LOP_Owner_Zip__c</fullName>
    <description>Property Owner Zip Code</description>
    <label>Property Owner Zip Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>