force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_PLUMBING_SUPPLIES__c.field-meta.xml
<CustomField>
    <fullName>LOP_PLUMBING_SUPPLIES__c</fullName>
    <label>Plumbing Supplies</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>