force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_PLUMBING_SUPPLIES_GOV__c.field-meta.xml
<CustomField>
    <fullName>LOP_PLUMBING_SUPPLIES_GOV__c</fullName>
    <label>Gov Leased Space-Plumbing Supplies</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>