force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_Property_Owner_Company__c.field-meta.xml
<CustomField>
    <fullName>LOP_Property_Owner_Company__c</fullName>
    <label>Property Owner Company</label>
    <length>100</length>
    <type>Text</type>
</CustomField>