force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_REAL_ESTATE_TAXES__c.field-meta.xml
<CustomField>
    <fullName>LOP_REAL_ESTATE_TAXES__c</fullName>
    <label>Real Estate Taxes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>