force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_Renewal_No_Of_Days_Exercise_Option__c.field-meta.xml
<CustomField>
    <fullName>LOP_Renewal_No_Of_Days_Exercise_Option__c</fullName>
    <description>Number of Days Notice to Exercise Option</description>
    <label>Number of Days Notice to Exercise Option</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>