force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_Renewal_NO_OF_OPTIONS__c.field-meta.xml
<CustomField>
    <fullName>LOP_Renewal_NO_OF_OPTIONS__c</fullName>
    <description>Renewal Number of Options</description>
    <label>Number of Options</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>