force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_Renewal_Shell_Rate__c.field-meta.xml
<CustomField>
    <fullName>LOP_Renewal_Shell_Rate__c</fullName>
    <description>Renewal Shell Rate / RSF / Yr</description>
    <label>Shell Rate /RSF / Yr</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>