force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_Renewal_YEARS_EACH__c.field-meta.xml
<CustomField>
    <fullName>LOP_Renewal_YEARS_EACH__c</fullName>
    <description>Renewal Years Each</description>
    <label>Years Each</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>