force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_Renovation_Year__c.field-meta.xml
<CustomField>
    <fullName>LOP_Renovation_Year__c</fullName>
    <description>Most recent building renovation year?</description>
    <label>Most recent building renovation year?</label>
    <length>4</length>
    <type>Text</type>
</CustomField>