force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_Representation_Business__c.field-meta.xml
<CustomField>
    <fullName>LOP_Representation_Business__c</fullName>
    <description>Does the owner represent itself as Small /Not Small Business submitting this offer?</description>
    <label>Small Business Identifier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not a Small Business</fullName>
            </value>
            <value>
                <fullName>Small Business</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>