force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_RETAIL_SPACE_RSF__c.field-meta.xml
<CustomField>
    <fullName>LOP_RETAIL_SPACE_RSF__c</fullName>
    <description>Warehouse Space :</description>
    <label>Warehouse Space RSF</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>