force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_RLP_Contains_Seismic_Requirement__c.field-meta.xml
<CustomField>
    <fullName>LOP_RLP_Contains_Seismic_Requirement__c</fullName>
    <description>Per Section 2 of the RLP, does the RLP contain seismic requirements</description>
    <inlineHelpText>Per Section 2 of the RLP, does the RLP contain seismic requirements</inlineHelpText>
    <label>RLP Contains Seismic Requirement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>The RLP does not contain seismic requirements.</fullName>
            </value>
            <value>
                <fullName>The RLP contains seismic requirements.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>