force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_RLP_Parking_Cost_Incl__c.field-meta.xml
<CustomField>
    <fullName>LOP_RLP_Parking_Cost_Incl__c</fullName>
    <description>Does the rental rate offered include RLP required parking costs?</description>
    <inlineHelpText>Does the rental rate offered include RLP required parking costs?</inlineHelpText>
    <label>RLP Parking Cost Included</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>