force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_Sam_Registered__c.field-meta.xml
<CustomField>
    <fullName>LOP_Sam_Registered__c</fullName>
    <description>SAM registration Status (Active or applied)</description>
    <inlineHelpText>SAM registration Status</inlineHelpText>
    <label>PBS_LOP_Sam_Registered</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Registration Active and Copy Attached in Attachments Tab</fullName>
            </value>
            <value>
                <fullName>No, will activate registration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>