force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_Schedule_Of_Commission_LeaseAward__c.field-meta.xml
<CustomField>
    <fullName>LOP_Schedule_Of_Commission_LeaseAward__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Schedule of Commission -Lease Award%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>