force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_Scheduled_Comm_Payment__c.field-meta.xml
<CustomField>
    <fullName>LOP_Scheduled_Comm_Payment__c</fullName>
    <description>Commission payment based on Schedule:
a. % at lease award
b. % at lease occupancy</description>
    <label>Scheduled Comm Payment</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>