force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_SECT2_TOTAL__c.field-meta.xml
<CustomField>
    <fullName>LOP_SECT2_TOTAL__c</fullName>
    <label>Operating Cost Section II Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>