force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_SECT2_TOTAL_GOV__c.field-meta.xml
<CustomField>
    <fullName>LOP_SECT2_TOTAL_GOV__c</fullName>
    <label>Op Cost Section II Total (GOVT Leased)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>