force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_SECURITY__c.field-meta.xml
<CustomField>
    <fullName>LOP_SECURITY__c</fullName>
    <label>Security</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>