force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_SHELL_Build_out_Costs__c.field-meta.xml
<CustomField>
    <fullName>LOP_SHELL_Build_out_Costs__c</fullName>
    <description>Shell Build-out Costs</description>
    <inlineHelpText>Shell Build-out Costs</inlineHelpText>
    <label>Shell Build-Out Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>