force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_Shell_Rent_Per_ABOA__c.field-meta.xml
<CustomField>
    <fullName>LOP_Shell_Rent_Per_ABOA__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Shell Rent Per ABOA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>