force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_SITE_AREA_TYPE__c.field-meta.xml
<CustomField>
    <fullName>LOP_SITE_AREA_TYPE__c</fullName>
    <description>Acres or SQFT (as entered by offeror)</description>
    <inlineHelpText>Acres or SQFT (as entered by offeror)</inlineHelpText>
    <label>16.Site Area Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SQFT</fullName>
                <default>true</default>
                <label>SQFT</label>
            </value>
            <value>
                <fullName>Acres</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>