force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_SITE_SIZE_SQFT__c.field-meta.xml
<CustomField>
    <fullName>LOP_SITE_SIZE_SQFT__c</fullName>
    <description>Site Size saved as SQFT</description>
    <inlineHelpText>Site Size saved as SQFT</inlineHelpText>
    <label>Site Size in SQFT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>