force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_SRVC_UTIL_TOTAL__c.field-meta.xml
<CustomField>
    <fullName>LOP_SRVC_UTIL_TOTAL__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Total (Service and Utilities)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>