force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_SRVC_UTIL_TOTAL_GOV__c.field-meta.xml
<CustomField>
    <fullName>LOP_SRVC_UTIL_TOTAL_GOV__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Gov Space-Total(Srvc and Util)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>