force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_SSTAX_WORKCOMP_GOV__c.field-meta.xml
<CustomField>
    <fullName>LOP_SSTAX_WORKCOMP_GOV__c</fullName>
    <label>Gov Space-SS Tax/Work Comp</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>