force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_State__c.field-meta.xml
<CustomField>
    <fullName>LOP_State__c</fullName>
    <description>Building State: Entered by offeror through LOP</description>
    <label>4. State</label>
    <length>150</length>
    <type>Text</type>
</CustomField>