force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_Step_1_End__c.field-meta.xml
<CustomField>
    <fullName>LOP_Step_1_End__c</fullName>
    <description>Step 1 Ending Year</description>
    <inlineHelpText>Step 1 Ending Year</inlineHelpText>
    <label>Step 1 End</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>