force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_Step_1_Rent_Per_ABOA__c.field-meta.xml
<CustomField>
    <fullName>LOP_Step_1_Rent_Per_ABOA__c</fullName>
    <description>Step 1 Rent Per ABOA</description>
    <inlineHelpText>Step 1 Rent Per ABOA</inlineHelpText>
    <label>Step 1 Rent Per ABOA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>