force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_Step_2_Start__c.field-meta.xml
<CustomField>
    <fullName>LOP_Step_2_Start__c</fullName>
    <description>Step 2 Starting Year</description>
    <inlineHelpText>Step 2 Starting Year</inlineHelpText>
    <label>Step 2 Start</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>