force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_Step_3_Rent_Per_RSF__c.field-meta.xml
<CustomField>
    <fullName>LOP_Step_3_Rent_Per_RSF__c</fullName>
    <description>Step 3 Rent Per RSF</description>
    <inlineHelpText>Step 3 Rent Per RSF</inlineHelpText>
    <label>Step 3 Rent Per RSF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>