force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>LOP_Street_Address__c</fullName>
    <description>Street Address: Entered by offeror through LOP</description>
    <label>2. Street Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>