force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_Street_Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>LOP_Street_Address_Line_2__c</fullName>
    <description>Street address suite information</description>
    <label>2. Street Address Line 2</label>
    <length>30</length>
    <type>Text</type>
</CustomField>