force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_STRUCT_PARKING_ANNUAL_COST__c.field-meta.xml
<CustomField>
    <fullName>LOP_STRUCT_PARKING_ANNUAL_COST__c</fullName>
    <description>Annual Cost per space for Structured Parking</description>
    <inlineHelpText>Annual Cost per space for Structured Parking</inlineHelpText>
    <label>Struct Parking Annual Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>