force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_Structured_Spaces_Controlled__c.field-meta.xml
<CustomField>
    <fullName>LOP_Structured_Spaces_Controlled__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total Structured Parking Spaces for the entire building under control of the offeror?</description>
    <inlineHelpText>Total Structured Parking Spaces for the entire building under control of the offeror?</inlineHelpText>
    <label>Structured Parking Spaces Under Control</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>