force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_SURFACE_PARKING_ANNUAL_COST__c.field-meta.xml
<CustomField>
    <fullName>LOP_SURFACE_PARKING_ANNUAL_COST__c</fullName>
    <description>Annual Cost per space for Surface Parking</description>
    <inlineHelpText>Annual Cost per space for Surface Parking</inlineHelpText>
    <label>Surface Parking Annual cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>