force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_Surface_Spaces_Controlled__c.field-meta.xml
<CustomField>
    <fullName>LOP_Surface_Spaces_Controlled__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Surface Parking Spaces Under Offeror Control</description>
    <label>Surface Parking Spaces Under Control</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>