force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_Taxes_Based_On_Fully_Assessed_Value__c.field-meta.xml
<CustomField>
    <fullName>LOP_Taxes_Based_On_Fully_Assessed_Value__c</fullName>
    <label>Taxes Based On Fully Assessed Value</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>