force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_TI_Amorization_in_Years__c.field-meta.xml
<CustomField>
    <fullName>LOP_TI_Amorization_in_Years__c</fullName>
    <description>TI Amorization in Years</description>
    <inlineHelpText>TI Amorization in Years</inlineHelpText>
    <label>TI Amorization in Years</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>