force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_TI_Amorti_Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>LOP_TI_Amorti_Interest_Rate__c</fullName>
    <description>TI Amortization Interest Rate</description>
    <inlineHelpText>TI Amortization Interest Rate</inlineHelpText>
    <label>TI Amorti Interest Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>