force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_TI_Buildout_as_in_RLP__c.field-meta.xml
<CustomField>
    <fullName>LOP_TI_Buildout_as_in_RLP__c</fullName>
    <label>TI Buildout as in RLP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>