force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_TI_Total_Build_out_Costs__c.field-meta.xml
<CustomField>
    <fullName>LOP_TI_Total_Build_out_Costs__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>TI Total Build-out Costs</description>
    <inlineHelpText>TI Total Build-out Costs</inlineHelpText>
    <label>TI Total Build-out Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>