force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_TOTAL_ABOA_OFFERED__c.field-meta.xml
<CustomField>
    <fullName>LOP_TOTAL_ABOA_OFFERED__c</fullName>
    <description>Total ANSI/BOMA Office Area Square Feet (ABOA) in the building</description>
    <label>Total BOMA USF Offered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>