force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_Total_Build_Out_Costs__c.field-meta.xml
<CustomField>
    <fullName>LOP_Total_Build_Out_Costs__c</fullName>
    <description>TOTAL BUILD-OUT COSTS (sum of TI total build-out costs, BSAC total build-out costs, and shell total build-out costs)</description>
    <formula>LOP_BSAC_Total_Build_out_Costs__c + LOP_TI_Total_Build_out_Costs__c + LOP_SHELL_Build_out_Costs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>TOTAL BUILD-OUT COSTS (sum of TI total build-out costs, BSAC total build-out costs, and shell total build-out costs)</inlineHelpText>
    <label>Total Build Out Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>