force-app/main/default/objects/PBS_LOP_OFFER__c/fields/LOP_Total_Land_Cost__c.field-meta.xml
<CustomField>
    <fullName>LOP_Total_Land_Cost__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Total Land Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>